[tool.poetry]
name = "ifttt-sunset"
version = "0.1.0"
description = ""
authors = ["Kazuki Hashimoto <eru.tndl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
suntime = "^1.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
